--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,14 @@
+html {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background-image: url("grey_wash_wall_@2X.png");
+    height: 100%;
+    margin: 0;
+    background-image: url("../images/herringbone.png");
 }
 
 header {
@@ -19,13 +26,13 @@ header {
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 320px;
+    left: 310px;
     color: white;
     background: #4aaaa5;
     font-size: 36px;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
     width: 20%;
-    padding-right: 20px;
+    padding-top: 7px;
     text-align: center;
 
 }
@@ -33,10 +40,18 @@ header {
 .wrapper {
     width: 600px;
     padding: 20px;
-    margin: 0 auto;
+    margin: 25px auto;
     border: 20px;
+    background: #ffffff;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 1px;
+    padding-bottom: 50px;
 }
 
+.content {
+    min-height: 100%;
+}
 
 h1 {
     color: #4aaaa5;
@@ -44,5 +59,73 @@ h1 {
 }
 
 footer {
-    position: fixed;
+    height: 50px;
+    width: 100%;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+    margin-top: -20px;
+
+}
+
+#me {
+    float: left;
+    clear: both;
+    margin: 0 15px 5px 0;
+    width: 200px;
+    height: 200px;
+}
+
+#panda {
+    float: left;
+    height: 150px;
+    width: 200px;
+}
+
+#airpods, #lights {
+    height: 150px;
+    width: 200px;
+    margin-left: 25px;
+}
+
+#iphone {
+    height: 150px;
+    width: 200px;
+    margin-top: 25px;
+}
+
+#controller {
+    height: 150px;
+    width: 200px;
+    margin-top: 25px;
+}
+
+
+.container {
+    float: left;
+    position: relative;
+    width: 200px;
+    text-align: center;
+}
+
+#rpg {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    background: #4aaaa5;
+    color: white;
+    height: 30px;
+    width: 200px;
+}
+
+#container2 {
+    position: relative;
+    height: 150px;
+    width: 200px;
+    float: left;
+    text-align: center;
+}
+
+#app {
+    position: absolute;
 }
