--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,25 +17,45 @@ header {
     border-width: 1px;
     border-color: #cccccc;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-    text-align: right;
-    padding: 20px;
+    padding: 28px;
     position: relative;
 }
 
-#name {
+.header-text {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 310px;
+    right: 0;
+    top: -65px;
+}
+
+.nav {
+    position: absolute;
+    right: 300px;
+}
+
+.name {
+    float: left;
+    position: absolute;
+    top: -85px;
+    bottom: 521.5px;
+    left: 0;
+    right: 600px;
     color: white;
     background: #4aaaa5;
     font-size: 36px;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-    width: 20%;
+    width: 250px;
     padding-top: 7px;
     text-align: center;
-
 }
+
+#name2 {
+    height: 51px;
+}
+
+#name3 {
+    height: 51px;
+}
+
 
 .wrapper {
     width: 600px;
@@ -47,10 +67,17 @@ header {
     border-color: #dddddd;
     border-width: 1px;
     padding-bottom: 50px;
+    position: relative;
+    /* overflow: auto; */
+}
+
+#wrapper2 {
+    height: 500px;
 }
 
 .content {
     min-height: 100%;
+    position: relative;
 }
 
 h1 {
@@ -76,7 +103,6 @@ footer {
 }
 
 #panda {
-    float: left;
     height: 150px;
     width: 200px;
 }
@@ -84,19 +110,11 @@ footer {
 #airpods, #lights {
     height: 150px;
     width: 200px;
-    margin-left: 25px;
 }
 
-#iphone {
+#iphone, #controller {
     height: 150px;
     width: 200px;
-    margin-top: 25px;
-}
-
-#controller {
-    height: 150px;
-    width: 200px;
-    margin-top: 25px;
 }
 
 
@@ -105,9 +123,10 @@ footer {
     position: relative;
     width: 200px;
     text-align: center;
+    margin-right: 18px;
 }
 
-#rpg {
+.image-text {
     position: absolute;
     top: 100px;
     left: 0;
@@ -116,16 +135,5 @@ footer {
     color: white;
     height: 30px;
     width: 200px;
-}
-
-#container2 {
-    position: relative;
-    height: 150px;
-    width: 200px;
-    float: left;
-    text-align: center;
-}
-
-#app {
-    position: absolute;
+    padding-top: ;
 }
